# ippan_suicide_study

./: .Rprofile  .devcontainer.json  .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  ippan_suicide_study.code-workspace  pyproject.toml  settings.yaml
config/: config.py  config.yaml
logs/: logger.py  logger.yaml
notebooks/: data_exploration.ipynb  data_mapping_2013_2022.ipynb  data_mapping_2023.ipynb  draft_data_summary.ipynb  draft_latent_class_analysis.ipynb  draft_log_reg_sklearn.ipynb  draft_log_reg_statsmodels.ipynb  group_exploration.ipynb  latent_class_analysis.ipynb  lca_class_exploration.ipynb  nan_exploration.ipynb
notebooks/drafts/: draft_data_mapping_2013_2022.ipynb  draft_data_mapping_2023.ipynb  draft_feature_enginering.ipynb  draft_latent_class_analysis.ipynb  draft_rfc_model.ipynb  python_sandbox.ipynb  r_sandbox.ipynb  sandbox.ipynb
results/dtc/: AGE_[19_34]_GENDER_[False, True].xlsx
results/poLCA/: lca_classes.csv
results/tables/: Demographic_Characteristics.docx  Demographic_Characteristics_with_Fatal.docx
settings/: data_mappings.yaml  features.yaml  group_mappings.yaml  settings.py
src/: main.py
src/config/: config.py  utils.R  utils.py
src/data_processing/: data_encoding.py  data_imputation.py  data_mapping.py  data_mapping_01.py  data_summary.py  feature_engineering.py  group_mapping.py  step_01_data_mapping.py  step_02_data_imputation.py  step_03_data_encoding.py  step_03_group_mapping.py
src/helpers/: config.R  config.py
src/models/: dtc_model.py  latent_class_analysis.R  (+6 more)
(+42 files in other folders)
